k8s-resources/invisible-captcha/svc-captcha.yaml
apiVersion: v1
kind: Service
metadata:
  name: a-little-fishy
spec:
  selector:
    app: a-little-fishy
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
